--- a/BNG/index.html
+++ b/BNG/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="We are an IT multiservice company located in Kabuga.">
 	<meta name="keywords" content="www.bng.rw, IT services, Computer and Phone Repair,Computer Maintenance">
-	<meta name="author" content="BNG">
+	<meta name="author" content="BNGRWANDA">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
-	<link rel="shortcut icon" href="./images/logo2.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
 	<title>BNG</title>
 </head>
 
